# gdal-win

./: .gitmodules  Cargo.toml  README.md  build.rs
examples/01_gdal_setup/: Cargo.toml  build.rs
examples/01_gdal_setup/src/: main.rs
examples/01_gdal_version/: Cargo.toml  build.rs
gdal/src/: config.rs  cpl.rs  dataset.rs  driver.rs  errors.rs  gcp.rs  gdal_major_object.rs  geo_transform.rs  lib.rs  metadata.rs  options.rs  test_utils.rs  utils.rs  version.rs  vsi.rs
gdal/src/programs/raster/: mdimtranslate.rs  vrt.rs
gdal/src/raster/: mdarray.rs  rasterband.rs  rasterize.rs  types.rs  warp.rs
gdal/src/raster/processing/dem/: aspect.rs  color_relief.rs  hillshade.rs  mod.rs  options.rs  roughness.rs  slope.rs  tpi.rs  tri.rs
gdal/src/spatial_ref/: mod.rs  srs.rs  transform.rs  transform_opts.rs
gdal/src/vector/: defn.rs  feature.rs  geometry.rs  layer.rs  mod.rs  options.rs  sql.rs  transaction.rs
gdal/src/vector/ops/: predicates.rs  set.rs  transformations.rs
gdal/src/vector/ops/conversions/: formats.rs  gdal_to_geo.rs  geo_to_gdal.rs
gdal_build/: Cargo.toml
gdal_build/src/: lib.rs
gdal_sys/: Cargo.toml
gdal_sys/src/: lib.rs
src/: b.rs  lib.rs
